<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.example.balarajum.login_screen_two.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_c"
        android:text="@string/namme"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:textColor="@android:color/white"
        />
    <FrameLayout
        android:layout_marginTop="100dp"
        android:layout_below="@id/name_c"
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:background="@drawable/log_frame"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="top"
            android:divider="?android:dividerHorizontal"
            android:layout_width="300dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/liner"
            android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:id="@+id/username"
                android:textColor="#bbc"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/usr_name"
                android:textColorHint="#bbc"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paswd"
                android:id="@+id/password"
                android:textColor="#bbc"
                />
            <
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/passwd"
                android:textColorHint="#bbc"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
    </FrameLayout>
    <TextView
        android:layout_below="@id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgt"
        android:id="@+id/frt"
        android:textColor="@android:color/white"
        android:layout_gravity="right"
        android:layout_marginLeft="170dp"
        />
    <Button
        android:layout_marginTop="20dp"
        android:layout_below="@id/frt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FA9A"
        android:id="@+id/login"
        android:text="@string/submit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textColor="@android:color/white"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        />
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:id="@+id/linere1"
        android:layout_below="@id/login"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GOOGLE"
        android:textColor="#f64c73"
        android:id="@+id/g_btn"
        android:layout_marginRight="5dp"
        android:background="@drawable/g_btn"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FACEBOOK"
        android:id="@+id/f_btn"
        android:textColor="#3F51B5"
        android:layout_marginRight="5dp"
        android:background="@drawable/f_btn"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TWITTER"
        android:id="@+id/t_btn"
        android:textColor="#87CEEB"
        android:background="@drawable/t_btn"
        />
    </LinearLayout>
</RelativeLayout>
